# Nifty-500-Live-Sentiment-Analysis

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  LSTM.ipynb  Makefile  NIFTY_500_live_sentiment.html  PRD.md  XC-tickers.csv  agent_project_log.md  architecture.md  concurrency.ipynb  config.py  dashboard-generation.py  database.py  fetch-data.py  fetch_data_alt.py  ind_nifty500list.csv  index.html  issue_deduplication_articles.md  lexicons.ipynb  playbook.ipynb  playbook_2.ipynb  pyproject.toml  readme.md  requirements.txt  scrape.ipynb  scrape.py  sentiment_data.csv  utils.py  xc-indices.csv
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/instructions/: general.instructions.md  python.instructions.md
.github/workflows/: ci.yml  copy_csv.yml  mail.yml  main.yml  manual_sentiment_test.yml  monthly_universe_update.yml  nifty-test-AutoDeployTrigger-7ba40b71-b910-450a-bccd-c35b928cbecc.yml  transformers.yml
.streamlit/: config.toml
database/: db_manager.py
datasets/: NIFTY_100.csv  NIFTY_200.csv  NIFTY_50.csv  NIFTY_500.csv  NIFTY_500_Articles.csv  lexicon_dictionary.csv  negative_words.csv  nifty_100.csv  nifty_200.csv  nifty_50.csv  nifty_500.csv  positive_words.csv  ticker_data.db  ticker_metadata.csv
devtools/: lint.py
docs/: database_schema.md  development.md
notebooks/: BhavCopy_NSE_CM_0_0_0_20250224_F_0000.csv  data_fetcher.ipynb  duck_db.ipynb  metadata.ipynb  news_sources.ipynb  newspaper.ipynb  playbook.ipynb  sec_list_24022025.csv  sentiment-analysis.ipynb  stock-market-index.ipynb  websocket.ipynb
services/: cogencis_scraper.py  data_fetcher.py  sentiment_analyzer.py  universe_updater.py
src/: config.py  dashboard-generation.py  database.py  db_utils.py  main.py  news_fetcher.py  sentiment_analysis_test.py  utils.py
src/devtools/: lint.py
src/nifty_analyzer/: __main__.py  config.py
src/nifty_analyzer/app/: dashboard.py
src/nifty_analyzer/core/: data_models.py  database.py  utils.py
src/nifty_analyzer/data_ingestion/: news_fetcher.py
src/nifty_analyzer/generation/: llm_agent.py
src/notebooks/: duck_db.ipynb  news_sources.ipynb
src/service/: llm_agent.py
tests/: __init__.py  test_data_fetcher.py  test_database.py  test_db_manager.py  test_placeholder.py  test_sentiment_analysis.py  test_sentiment_analyzer.py  test_universe_updater.py
