[project]
name = "nifty-500-live-sentiment-analysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "whenever>=0.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "orjson>=3.10.16",
    "pandas-stubs>=2.2.3.250308",
    "watchdog>=6.0.0",
]
